# patternboost-multilevel

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-analysis.txt  requirements-torch.txt
configs/: formulaboost_modular_sidon_mvp.json
docs/: COLLABORATOR_EXPERIMENT_DETAILS.md  EXPERIMENT_MATRIX.md  EXPLORATORY_RESULTS.md  FINAL_81_ANALYSIS.md  FORMULABOOST.md  HANDOFF.md  HPC_JUBAIL.md  MODEL_CAPACITY_EXPERIMENT.md  PATTERNBOOST_EXPERIMENT_REPORT.md  PROJECT_STRUCTURE.md  REPLACEMENT_DELTA_EXPERIMENT.md  RESULTS.md  SYMMETRY_CROSSOVER_EXPERIMENT.md
examples/: epsilon_net_small.json  graph_separation_small.json  guillotine_small.json  misr_small.json  unit_square_small.json
runs/: README.md
scripts/: analyze_model_capacity.py  archive_replacement_81_artifacts.py  audit_certificates.sh  build_replacement_81_dataset.py  collect_hpc_results.sh  compact_main_matrix_events.py  control_array.slurm  explore_array.slurm  extract_learning_curves.py  formulaboost_conjecture_probe.py  freeze_environment.sh  generate_main_matrix_tex.py  make_exploratory_matrix.sh  make_followup_from_pilot.sh  make_main_matrix.sh  make_replacement_delta_matrix.sh  make_sample3_matrix.sh  make_symmetry_crossover_matrix.sh  monitor_hpc_run.sh  pilot_array.slurm  plot_component_slices.py  plot_main_matrix_analysis.py  postprocess_main_matrix.slurm  prepare_hpc_environment.sh  prepare_hpc_scratch_venv.sh  run_full_controls.sh  run_full_matrix_baseline.sh  run_full_matrix_patternboost.sh  run_full_matrix_search.sh  run_one_cell.sh  run_problem_baseline.sh  run_smoke.sh  (+7 more)
(+719 files in other folders)
