[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patternboost-multilevel"
version = "0.1.0"
description = "Fresh multi-level experiment harness for PatternBoost geometric extremal search"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10"
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=8"]

[project.scripts]
multilevel = "multilevel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
